# musehub

./: .cursorrules  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  tsconfig.node.json
.cursor/: mcp.json
.cursor/rules/: docker-dev-workflow.mdc  separation-of-concerns.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_consolidated_schema.py  0002_drop_muse_variation_tables.py  0002_v2_domains.py  0003_wire_and_identities.py  0004_release_system_v2.py  0005_semantic_release_report.py
deploy/: aws-provision.sh  backup.sh  nginx-ssl.conf  seed.sh  setup-ec2.sh
docs/reference/: mcp.md  type-contracts.md
docs/roadmaps/: musehub-taxonomy.md
musehub/: config.py  main.py  rate_limits.py
musehub/api/: __init__.py
musehub/api/routes/: __init__.py  mcp.py  wire.py
musehub/api/routes/api/: __init__.py  identities.py  repos.py  search.py
musehub/api/routes/musehub/: __init__.py  _nav_ctx.py  _templates.py  analysis.py  blame.py  collaborators.py  discover.py  domains.py  feeds.py  htmx_helpers.py  issues.py  jinja2_filters.py  json_alternate.py  labels.py  milestones.py  negotiate.py  objects.py  oembed.py  pagination.py  pull_requests.py  raw.py  releases.py  repos.py  search.py  sitemap.py  social.py  stash.py  sync.py  topics.py  ui.py  ui_blame.py  ui_collaborators.py  ui_domains.py  ui_emotion_diff.py  ui_forks.py  ui_jsonld.py  ui_labels.py  ui_mcp_elicitation.py  ui_milestones.py  ui_new_repo.py  (+9 more)
musehub/auth/: __init__.py  dependencies.py  revocation_cache.py  tokens.py
musehub/contracts/: __init__.py  generation_types.py  hash_utils.py  json_types.py  llm_types.py  mcp_types.py  midi_types.py  project_types.py  pydantic_types.py
musehub/db/: __init__.py  database.py  models.py  muse_cli_models.py  musehub_collaborator_models.py  musehub_domain_models.py  musehub_label_models.py  musehub_models.py  musehub_stash_models.py
musehub/mcp/: __init__.py  context.py  dispatcher.py  elicitation.py  prompts.py  resources.py  server.py  session.py  sse.py  stdio_server.py
musehub/mcp/tools/: __init__.py  musehub.py
musehub/mcp/write_tools/: __init__.py  elicitation_tools.py  issues.py  pulls.py  releases.py  repos.py  social.py
musehub/models/: __init__.py  base.py  musehub.py  musehub_analysis.py  musehub_context.py  wire.py
musehub/muse_cli/: __init__.py  db.py  models.py  snapshot.py
musehub/protocol/: GOLDEN_HASH  __init__.py  emitter.py  endpoints.py  events.py  hash.py  registry.py  responses.py  validation.py  version.py
musehub/protocol/schemas/: __init__.py  project.py
musehub/services/: __init__.py  musehub_analysis.py  musehub_context.py  musehub_credits.py  musehub_discover.py  musehub_divergence.py  musehub_domains.py  musehub_embeddings.py  musehub_events.py  musehub_exporter.py  musehub_issues.py  musehub_listen.py  musehub_mcp_executor.py  musehub_midi_parser.py  musehub_notation.py  musehub_piano_roll_renderer.py  musehub_profile.py  musehub_pull_requests.py  musehub_qdrant.py  musehub_release_packager.py  musehub_releases.py  musehub_render_pipeline.py  musehub_repository.py  musehub_search.py  musehub_sessions.py  musehub_sync.py  musehub_webhook_crypto.py  musehub_webhook_dispatcher.py  musehub_wire.py  musehub_wire_tags.py  release_analysis.py
musehub/storage/: __init__.py  backends.py
musehub/templates/mcp/: elicitation_callback.html  elicitation_connect.html
musehub/templates/musehub/: base.html
musehub/templates/musehub/fragments/: activity_rows.html  branch_rows.html  collaborator_rows.html  commit_comments.html  commit_rows.html  file_tree.html  global_search_results.html  issue_comments.html  issue_rows.html  label_list.html  milestone_issue_rows.html  milestone_rows.html  notification_rows.html  pr_comments.html  pr_rows.html  release_rows.html  repo_grid.html  search_results.html  session_rows.html  slug_check.html  stash_rows.html
musehub/templates/musehub/macros/: commit.html  empty_state.html  issue.html  label.html  milestone.html  pagination.html
musehub/templates/musehub/pages/: activity.html  analysis.html  arrange.html  blame.html  blob.html  branches.html  chord_map.html  collaborators_settings.html  commit.html  commit_detail.html  commits.html  compare.html  context.html  contour.html  credits.html  diff.html  divergence.html  domain_detail.html  domains.html  dynamics.html  embed.html  emotion.html  emotion_diff.html  explore.html  feed.html  forks.html  form.html  form_structure.html  global_search.html  graph.html  groove.html  groove_check.html  insights.html  issue_detail.html  issue_list.html  key.html  labels.html  listen.html  mcp_docs.html  (+28 more)
scripts/: midi_generator.py  migrate_webhook_secrets.py  seed_musehub.py  seed_narratives.py  seed_production.py  seed_pull_requests.py  seed_v2.py
tests/: conftest.py  factories.py  test_high_security_h2_h8.py  test_ingest_push_snapshots.py  test_mcp_dispatcher.py  test_mcp_elicitation.py  test_mcp_musehub.py  test_mcp_streamable_http.py  test_medium_security_m1_m7.py  test_musehub_activity.py  test_musehub_alembic.py  test_musehub_analysis.py  test_musehub_api_contracts.py  test_musehub_auth.py  test_musehub_auth_security.py  test_musehub_blame.py  test_musehub_collaborators.py  test_musehub_context.py  test_musehub_contracts.py  test_musehub_discover.py  test_musehub_embeddings.py  test_musehub_export.py  test_musehub_feeds.py  test_musehub_htmx_helpers.py  test_musehub_htmx_migration_final.py  test_musehub_issues.py  test_musehub_jinja2_macros.py  test_musehub_js_cleanup.py  test_musehub_json_alternate.py  test_musehub_labels.py  test_musehub_muse_cli.py  test_musehub_negotiate.py  test_musehub_notation.py  test_musehub_objects.py  test_musehub_oembed.py  test_musehub_openapi.py  test_musehub_pagination.py  test_musehub_profile_service.py  test_musehub_prs.py  test_musehub_raw.py  (+64 more)
tools/: typing_audit.py
tourdeforce/clients/: muse.py
(+130 files in other folders)
