[project]
name = "musehub"
version = "0.1.0"
description = "MuseHub — the music composition version control platform powered by Muse VCS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "PyJWT>=2.8.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "slowapi>=0.1.9",
    "cryptography>=42.0.0",
    "boto3>=1.34.0",
    "mido>=1.3.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.0.0",
    "anyio>=4.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = "/tmp/pytest_cache"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:The 'is_flag' and 'flag_value' parameters are not supported by Typer:DeprecationWarning",
]

[tool.coverage.run]
source = ["musehub"]
branch = true
omit = ["musehub/__init__.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "mido", "yaml"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["musehub"]
