[project]
name = "musehub"
version = "0.1.0"
description = "MuseHub — the music composition version control platform powered by Muse VCS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "jinja2>=3.1.0",
    "aiofiles>=25.1.0",
    "uvicorn[standard]>=0.42.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "websockets>=16.0",
    "PyJWT>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.0",
    "alembic>=1.18.0",
    "psycopg2-binary>=2.9.11",
    "slowapi>=0.1.9",
    "cryptography>=46.0.0",
    "boto3>=1.42.0",
    "mido>=1.3.3",
    "pyyaml>=6.0.3",
    "typer>=0.24.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "coverage>=7.0.0",
    "anyio>=4.12.0",
    "mypy>=1.19.0",
    "factory-boy>=3.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
cache_dir = "/tmp/pytest_cache"
addopts = "-v --tb=short -p no:randomly"
filterwarnings = [
    "ignore:The 'is_flag' and 'flag_value' parameters are not supported by Typer:DeprecationWarning",
    # aiosqlite uses Python's deprecated default datetime adapter internally;
    # this is a third-party library issue, not ours (production uses asyncpg).
    "ignore:The default datetime adapter is deprecated:DeprecationWarning:aiosqlite",
]

[tool.coverage.run]
source = ["musehub"]
branch = true
omit = ["musehub/__init__.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "mido", "yaml"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["musehub"]
