[project]
name = "musehub"
version = "0.1.0"
description = "MuseHub — the music composition version control platform powered by Muse VCS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "aiofiles>=25.1.0",
    "uvicorn[standard]>=0.42.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "websockets>=15.0.1",
    "PyJWT>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.10",
    "slowapi>=0.1.9",
    "cryptography>=46.0.5",
    "boto3>=1.42.71",
    "mido>=1.3.3",
    "pyyaml>=6.0.2",
    "mistune>=3.0.0",
    "typer>=0.15.4",
    "msgpack>=1.1",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.1.0",
    "pytest-xdist>=3.6.1",
    "coverage>=7.8.0",
    "anyio>=4.9.0",
    "mypy>=1.15.0",
    "factory-boy>=3.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
cache_dir = "/tmp/pytest_cache"
addopts = "-v --tb=short -p no:randomly"
filterwarnings = [
    "ignore:The 'is_flag' and 'flag_value' parameters are not supported by Typer:DeprecationWarning",
    # aiosqlite uses Python's deprecated default datetime adapter internally;
    # this is a third-party library issue, not ours (production uses asyncpg).
    "ignore:The default datetime adapter is deprecated:DeprecationWarning:aiosqlite",
    # slowapi uses asyncio.iscoroutinefunction which is deprecated in 3.14+.
    # This is a third-party library issue; suppress until slowapi ships a fix.
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:slowapi",
]

[tool.coverage.run]
source = ["musehub"]
branch = true
omit = ["musehub/__init__.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.14"
strict = true
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "mido", "yaml", "qdrant_client", "qdrant_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["msgpack", "msgpack.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["musehub"]
